# pos-server

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml
crates/gpu-post/: Cargo.toml
crates/gpu-post/src/: main.rs
crates/pos-api/: Cargo.toml  build.rs
crates/pos-api/proto/pos_api_service/: api.proto
crates/pos-api/src/: api.rs  api_extensions.rs  lib.rs  pos_api.rs
crates/pos-compute/: Cargo.toml  README.md
crates/pos-compute/resources/: api.h  gpu-setup-test-linux  gpu-setup-test-macOS  libgpu-setup.lib
crates/pos-compute/src/: lib.rs  main.rs
crates/pos-server/: Cargo.toml
crates/pos-server/src/: main.rs  pos_task.rs  server.rs
crates/pos-server/src/api/: mod.rs  pos_grpc_service.rs
crates/pos-service/: Cargo.toml  MoltenVK_icd.json  design_ideas.md  gpu-setup-test
crates/pos-service/src/: main.rs  pos_task.rs  server.rs
crates/pos-service/src/api/: pos_grpc_service.rs
crates/pos-service/tests/: cpu_job_test.rs  cpu_provider_conf.json  gpu_test.rs  gpus_providers_conf.json  multiple_jobs.rs  rig_test.rs  server_tests.rs  test_helpers.rs
src/: lib.rs  main.rs  service_api.proto
