[package]
name = "gpu-post-bindings"
version = "0.0.1"
authors = ["spacemesh <devteam@spacemesh.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustc_version = "0.2"

[dependencies]

[lib]
path = "src/lib.rs"
name = "gpu_post_bindings"

[[bin]]
path = "src/main.rs"
name = "gpu-binding-test"
