[package]
name = "gpu-post-bindings"
version = "0.0.1"
authors = ["spacemesh <devteam@spacemesh.io>"]
edition = "2018"

[build-dependencies]
rustc_version = "0.2"

[dependencies]

[lib]
path = "src/lib.rs"
name = "gpu_post_bindings"

# links = "gpu-setup"

[[bin]]
path = "src/main.rs"
name = "gpu-binding-test"
