[package]
name = "pos-service"
version = "0.1.0"
authors = ["avive <avive@spacemesh.io>"]
description = "proof of space creation server"
edition = "2018"

[dependencies]
pos-compute = { path = "../pos-compute" }
pos-api = { path = "../pos-api" }

bytes = { version = "0.6", features = ["serde"] }
log = "*"
env_logger = "*"
anyhow = "1"
datetime = "*"
config = "*"
nix = "0.19.1"
getopts = "*"
clap = "*"
hex = "*"
chrono = "*"

xactor = { version = "0.7.11", features = ["runtime-tokio"], default-features = false}
xactor-derive = "0.7.0"
async-trait = "0.1.42"
futures = "0.3"
prost = "0.7"
tonic = "0.4.2"
tokio = { version = "1", features = ["full"] }
rand = "0.8.0"

[[bin]]
path = "src/main.rs"
name = "post_service"


